--- a/css/sections/localizacao.css
+++ b/css/sections/localizacao.css
@@ -1,16 +1,75 @@
 #localizacao {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto 1fr;
   gap: 10px;
+  align-items: center;
 }
 
 #localizacao h2 {
-  grid-column: 1/3;
+  grid-column: 1/4;
   text-align: center;
+  margin: 0;
+}
+
+#localizacao #map {
+  text-align: center;
+}
+
+#endereco h3 {
+  margin: 0;
 }
 
 #horarios,
 #endereco {
-  background: lightgray;
+  outline: 1px solid lightgray;
+  padding: 15px;
+}
+
+#endereco {
+  display: grid;
+  gap: 10px;
+  grid-column: 1/4;
+}
+
+#map {
+  height: 400px;
+  grid-column: 1/3;
+}
+
+#texto-endereco {
+  display: flex;
+  flex-direction: column;
+  grid-column: 1;
+  gap: 5px;
+}
+
+#texto-endereco span {
+  font-size: 1.5rem;
+}
+
+#lista-horario {
+  grid-column: 2;
+}
+
+.card-horario {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 15px;
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 640px) {
+  #texto-endereco {
+    grid-column: 1;
+  }
+
+  #lista-horarios {
+    grid-column: 1;
+  }
+
+  #endereco {
+    gap: 30px;
+  }
 }
