--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,4 +9,8 @@ html,
 body {
   height: 100%;
   margin: 0;
+}
+
+h1, h2, h3, span, a, button, p {
+  font-family: Kanit;
 }
