--- a/css/sections/localizacao.css
+++ b/css/sections/localizacao.css
@@ -1,7 +1,7 @@
 #localizacao {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: min-content min-content;
   gap: 10px;
   align-items: center;
 }
