--- a/css/sections/doar.css
+++ b/css/sections/doar.css
@@ -1,6 +1,7 @@
 #doar {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr;
+	grid-template-rows: min-content min-content auto;
 	gap: 10px;
 	justify-content: center;
 }
@@ -11,8 +12,19 @@
 }
 
 #doar #dados-doacoes {
-	grid-column: 2;
+	grid-column: 1;
 	text-align: center;
 	margin: 0;
 	font-size: 1.25rem;
+}
+
+#doar #dados-pix {
+	grid-column: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#doar #dados-pix img {
+	width: clamp(250px, 100%, 500px);
 }
