--- a/css/sections/doar.css
+++ b/css/sections/doar.css
@@ -4,11 +4,13 @@
 	grid-template-rows: min-content min-content auto;
 	gap: 10px;
 	justify-content: center;
+	color: white;
 }
 
 #doar h2 {
 	grid-column: 1/4;
 	text-align: center;
+	margin: 0;
 }
 
 #doar #dados-doacoes {
@@ -26,5 +28,6 @@
 }
 
 #doar #dados-pix img {
-	width: clamp(250px, 100%, 500px);
+	width: 100%;
+	max-width: 300px;
 }
