--- a/css/sections/eventos.css
+++ b/css/sections/eventos.css
@@ -1,23 +1,29 @@
 #eventos {
   display: grid;
   grid-template-rows: auto 1fr;
+  gap: 15px;
   width: 100%;
-  justify-content: center;
-  justify-items: center;
-  gap: 10px;
 }
 
 #eventos h2 {
   height: min-content;
   text-align: center;
+  color: white;
+  margin: 0;
 }
 
 .card-evento {
-  width: clamp(450px, 100%, 900px);
-  outline: 1px solid lightgray;
+  background-color: var(--COR_CONTAINER);
+  border-radius: 25px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
 }
 
 .card-evento img {
+  align-self: center;
+  border-radius: 15px;
   width: 100%;
 }
 
@@ -26,6 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
+  color: white;
 }
 
 .card-evento #texto-sopao h3 {
