--- a/css/sections/galeria.css
+++ b/css/sections/galeria.css
@@ -5,16 +5,22 @@
 	text-align: center;
 }
 
+#galeria h2 {
+	color: white;
+	margin: 0;
+}
+
 #carrossel-fotos span{
-	width: 100%;
 	height: 640px;
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	background-color: var(--COR_CONTAINER);
+	border-radius: 25px;
 }
 
 #carrossel-fotos span:nth-child(1) {
-	background-size: contain;
+	/* background-size: contain; */
 }
 
 #carrossel-fotos span:nth-child(4) {
@@ -24,6 +30,6 @@
 #carrossel-fotos {
 	display: grid;
 	gap: 10px;
-	grid-template-columns: repeat(auto-fill, minmax(640px, 1fr));
-	grid-template-rows: repeat(auto-fill, minmax(640px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+	grid-template-rows: repeat(auto-fill, minmax(340px, 1fr));
 }
