--- a/css/sections/inicio.css
+++ b/css/sections/inicio.css
@@ -10,8 +10,13 @@
 
 #frase {
   font-family: Cinzel, serif;
+  color: lightgrey;
   padding: 15px;
   font-size: 1.3rem;
+}
+
+#frase a {
+  font-weight: 700;
 }
 
 #inicio {
@@ -25,6 +30,7 @@
 
 #titulo {
   height: min-content;
+  color: white;
   margin: 0;
 }
 
@@ -33,7 +39,7 @@
   padding: 15px;
   cursor: pointer;
   border-radius: 5px;
-  background: white;
-  outline: 0.1px solid #cecece;
+  background: var(--COR_BOTAO);
   font-size: 1.2rem;
+  color: white;
 }
