--- a/css/sections/localizacao.css
+++ b/css/sections/localizacao.css
@@ -4,32 +4,33 @@
   grid-template-rows: min-content min-content;
   gap: 10px;
   align-items: center;
+  padding: 15px;
+}
+
+#localizacao section {
+  text-
 }
 
 #localizacao h2 {
   grid-column: 1/4;
   text-align: center;
   margin: 0;
+  color: white;
 }
 
 #localizacao #map {
   text-align: center;
+  border-radius: 25px;
 }
 
-#endereco h3 {
+#endereco h3, h4 {
   margin: 0;
-}
-
-#horarios,
-#endereco {
-  outline: 1px solid lightgray;
-  padding: 15px;
 }
 
 #endereco {
   display: grid;
-  gap: 10px;
   grid-column: 1/4;
+  gap: 10px;
 }
 
 #map {
@@ -40,16 +41,24 @@
 #texto-endereco {
   display: flex;
   flex-direction: column;
-  grid-column: 1;
   gap: 5px;
+  padding: 25px;
+  border-radius: 15px;
+  height: fit-content;
 }
 
-#texto-endereco span {
-  font-size: 1.5rem;
+#dropdown-endereco[active="0"] ~ :not(section),
+#dropdown-horario[active="0"] ~ :not(section){
+  display: none;
 }
 
-#lista-horario {
-  grid-column: 2;
+#lista-horarios {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  border-radius: 15px;
+  height: fit-content;
 }
 
 .card-horario {
@@ -57,19 +66,25 @@
   justify-content: left;
   align-items: center;
   gap: 15px;
-  font-size: 1.5rem;
+}
+
+#dropdown-endereco,
+#dropdown-horario {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 640px) {
   #texto-endereco {
-    grid-column: 1;
+    grid-column: 1/3;
   }
 
   #lista-horarios {
-    grid-column: 1;
+    grid-column: 1/3;
   }
 
   #endereco {
-    gap: 30px;
+    gap: 20px;
   }
 }
